fixed whitespace is landscape

--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@ body {
     margin-bottom: 0px;
     overflow-x: hidden;
 }
-
+@media (max-width: 767px){
+  body{
+  padding-right: 20px;
+  padding-left: 20px;
+  }
+}
 @media screen and (orientation: portrait){
   #wrapper{
     width: 100%;
